<resources>
    <string name="app_name">2020_3_EIO</string>
    <string name="header">NIT Kumamoto Campus</string>
    <string name="camera_button_text">写真を撮る</string>
    <string name="mailsend_button_text">送信文を書く</string>
    <string name="description">camera picture</string>
    <string name="setting_account">アカウント設定</string>
    <string name="account">アカウント名</string>
    <string name="Password">パスワード</string>
    <string name="secure_account_page">Googleアカウントの\nセキュリティ設定ページ</string>
    <string name="gmail.com">＠gmail.com</string>
    <string name="account_set">アカウント情報を保存</string>
    <string name="mailsentence">メール本文</string>
    <string name="tymailsend">ご協力ありがとうございました。\n\n画面をタップしてお戻りください。</string>
</resources>